<resources>
    <string name="app_name">Blooming Beacon</string>
    <string name="welcome_to_blooming_beacon">Welcome to Blooming Beacon!</string>
    <string name="home">Home</string>
    <string name="about_us">About Us</string>
    <string name="our_vision">Our Vision</string>
    <string name="chat">Chat</string>
    <string name="our_team">Our Team</string>
    <string name="_2017_2018">2017 - 2018</string>
    <string name="_2016_2017">2016 - 2017</string>
    <string name="_2015_2016">2015 - 2016</string>
    <string name="_2014_2015">2014 - 2015</string>
    <string name="developer">Developer</string>
    <string name="about_developer">About Developer</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="sponsor">Sponsor</string>
    <string name="donate">Donate</string>
    <string name="login_register">Login / Register</string>
    <string name="application">Application</string>
    <string name="download_shoppingo">Download Shoppingo</string>
    <string name="exit_application">Exit Application</string>
    <string name="contact_us">Contact Us</string>
    <string name="our_location">Our Location</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback_suggestion">Feedback / Suggestion</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_our_location">Map</string>
    <string name="blooming_beacon_is_a_student_community_registered_with_the_tamil_nadu_government_of_india_aiming_at_social_welfare_and_betterment_of_the_society">Blooming Beacon is a student community, registered with the Tamil Nadu Government of India, aiming at social welfare and betterment of the society.</string>
    <string name="about_us_activity_text_long">We endeavor to unshackle women and children and deliver them their true power and dignity. We are a group of workaholics that focuses on every aspect of a problem and channelizes the youth\’s efficiency to ensure a solution sans loop holes.\n\n Our performance lies on both individual and team efforts to channelize the efforts in the right direction, with its motto\'s and aims towards social evolution.</string>
    <string name="women_empowerment_long">\"Modern invention has banished the spinning wheel, and the same law of progress makes the women of today a different woman from her grandmother.\" — said \'Susan B. Anthony\'\n\nWe at Blooming Beacon are committed towards ensuring self protection for women and help them create self employment opportunities that would resonate in society for a long time to come.\n\nWe are also committed towards right to equality for women to prevent the social fabric of mankind.</string>
    <string name="youth_affairs_long">It is a vital part of the organization where students are counseled upon various issues such as peer pressure, addiction, etc.\n\nMembers of the organization ought to find appropriate solutions and guide the young minds to the right direction.\n\nMembers at Blooming Beacon formed a students\’ community that marks to be a good companion to others and hence, developing better outcomes in one\’s personality.</string>
    <string name="social_affairs_long">With the successful events that follow up, we organize medical camps, blood donation camps, monthly visits to different orphanages and privileging the homeless with clothes and other necessities.\n\nHence, we strive to look forward to a better and self-sustained society against poverty and partiality.</string>
    <string name="e_mail">E-mail</string>
    <string name="bloomingbeacon_gmail_com">bloomingbeacon@gmail.com</string>
    <string name="password">Password</string>
    <string name="password_hint">**********</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="donation_paytm_number">+91 9566191154</string>
    <string name="paytm_us_at">PayTM us at :</string>
    <string name="women_empowerment">Women Empowerment</string>
    <string name="youth_affairs">Youth Affairs</string>
    <string name="social_affairs">Social Affairs</string>
    <string name="name">Name</string>
    <string name="blooming_beacon">Blooming Beacon</string>
    <string name="let_s_get_you_settled_in">Let\'s get you settled in!</string>
    <string name="contact_number">Contact Number</string>
    <string name="_987654321">987654321</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="_16_01_1997">16/01/1997</string>
    <string name="hometown">Hometown</string>
    <string name="chennai_tamil_nadu">Chennai, Tamil Nadu</string>
    <string name="expected_graduation_year">Expected Graduation Year</string>
    <string name="_2019">2019</string>
    <string name="majors_or_stream">Majors (or Stream)</string>
    <string name="college_issued_id">College issued ID</string>
    <string name="srm123456">SRM123456</string>
    <string name="languages">Languages</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="tamil">Tamil</string>
    <string name="telugu">Telugu</string>
    <string name="other_sanskrit_example">Other: Sanskrit (example)</string>
    <string name="department_you_re_interested_in">Department you\'re interested in</string>
    <string name="why_are_you_interested_in_social_service">Why are you interested in Social Service?</string>
    <string name="because_i_love_it_and">Because I love it and ...</string>
    <string name="major_notable_skills">Major Notable Skills</string>
    <string name="android_developer">Android Developer</string>
    <string name="how_can_you_help_blooming_beacon">How can you help Blooming Beacon?</string>
    <string name="i_can_impart_my_skill_set_to_the_underprivileged">I can impart my skill set to the underprivileged.</string>
    <string name="do_you_have_any_previous_experience">Do you have any previous experience?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="call">Call</string>
    <string name="computer_science">Computer Science</string>
    <string name="recent_updates">Recent Updates</string>
    <string name="more">More</string>
    <string name="note_to_user_about_information">We will be saving the information that you\'ve entered above. We assure you that this information isn\'t shared with anyone else and that we store the information securely to the best of our knowledge.</string>
</resources>
